# cdn-sim

./: CMakeLists.txt  LICENSE  README.md
Shared/: Result.h
Shared/IO/: IO.h
Shared/Location/: Location.cpp  Location.h
Shared/Logger/: Logger.cpp  Logger.h  LoggerMessage.h
Shared/Server/: Server.cpp  Server.h
cdn-node/: CMakeLists.txt  main.cpp
cdn-node/Cache/: Cache.cpp  Cache.h
cdn-node/Client/: Client.cpp  Client.h
cdn-node/Contracts/: IRequest.h  IResponse.h
cdn-node/SyncThread/: SyncThread.cpp  SyncThread.h
cdn-node/Thread/: Thread.cpp  Thread.h
cdn-node/ThreadPool/: ThreadPool.cpp  ThreadPool.h
client/: CMakeLists.txt  main.cpp
client/Client/: Client.cpp  Client.h
client/Contracts/: IRequest.h  IResponse.h  ImageShower.h
docs/: Usage.md
edge-server/: CMakeLists.txt  main.cpp
edge-server/CdnManager/: CdnManager.cpp  CdnManager.h
edge-server/CdnThread/: CdnThread.cpp  CdnThread.h
edge-server/Client/: Client.cpp  Client.h
edge-server/Contracts/: IRequest.h  IResponse.h
edge-server/Thread/: Thread.cpp  Thread.h
edge-server/ThreadPool/: ThreadPool.cpp  ThreadPool.h
origin-server/: CMakeLists.txt  main.cpp
origin-server/Contracts/: IRequest.h  IResponse.h  ImageRequest.h  TextRequest.cpp  TextRequest.h
origin-server/Thread/: Thread.cpp  Thread.h
origin-server/ThreadPool/: ThreadPool.cpp  ThreadPool.h
